--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<mat-toolbar color="primary">
-  <span>My Application</span>
-</mat-toolbar>
+<router-outlet>
 
-
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+</router-outlet>
