--- a/src/app/public/catalog/pages/catalog-page/catalog-page.component.html
+++ b/src/app/public/catalog/pages/catalog-page/catalog-page.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary">
-  <span>My Application</span>
-</mat-toolbar>
+<app-header>
+
+</app-header>
 
 <div class="container">
   <mat-card class="card" *ngFor="let product of products$ | async">
