Сверстал header и footer

--- a/src/app/public/catalog/pages/catalog-page/catalog-page.component.html
+++ b/src/app/public/catalog/pages/catalog-page/catalog-page.component.html
@@ -1,6 +1,4 @@
-<app-header>
-
-</app-header>
+<app-header></app-header>
 
 <div class="container">
   <mat-card class="card" *ngFor="let product of products$ | async">
@@ -15,3 +13,5 @@
     </mat-card-actions>
   </mat-card>
 </div>
+
+<app-footer></app-footer>
