--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,34 @@
-<mat-toolbar color="primary">
-  <span>My Application</span>
-</mat-toolbar>
+<header class="header">
+  <div class="header__wrapper container">
+    <div class="header__content">
+      <a href="#"><img src="/assets/images/logo.png" alt=""/></a>
+      <div class="header__content_search">
+        <input class="main-field" type="text" placeholder="Введите название..."/>
+        <div><svg width="20" height="19" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-search"></use></svg></div>
+      </div>
+      <ul>
+        <li>
+          <a href="#">
+            <div><svg width="20" height="19" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-favourite"></use></svg></div>
+            <span>Избранное</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div><svg width="20" height="20" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-cart"></use></svg></div>
+            <span>Корзина</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div><svg width="16" height="20" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-account"></use></svg></div>
+            <span>Войти</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="header__bottom-nav">
+
+    </div>
+  </div>
+</header>
