--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'assets/css/fonts';
+@import 'assets/css/vars';
+@import 'assets/css/utils';
