--- a/src/app/public/catalog/pages/catalog-page/catalog-page.component.scss
+++ b/src/app/public/catalog/pages/catalog-page/catalog-page.component.scss
@@ -1,3 +1,4 @@
+
 .card {
   max-width: 400px;
   padding: 16px;
@@ -5,4 +6,8 @@
 
 .container {
   padding: 16px;
+  max-width: 800px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 34px;
 }
