--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,3 +1,11 @@
+.toolbar {
+  display: flex;
+  gap: 24px;
+}
+
+.spacer {
+  flex: 1;
+}
 .header {
     &__content {
         display: flex;
@@ -14,7 +22,7 @@
         &_search {
             position: relative;
             margin-left: auto;
-            margin-right: 24px; 
+            margin-right: 24px;
             max-width: 535px;
             width: 100%;
 
