Сделал фильтарцию по категориям, осталось доработать визуальную часть

--- a/src/app/public/catalog/components/product-card/product-card.component.scss
+++ b/src/app/public/catalog/components/product-card/product-card.component.scss
@@ -3,6 +3,8 @@
   padding: 17px;
   background-color: #F5F9FF;
   max-width: 276px;
+  max-height: 271px;
+  box-sizing: border-box;
   border-radius: 20px;
   color: var( --theme-black);
 }
