--- a/src/app/public/catalog/pages/catalog-page/catalog-page.component.html
+++ b/src/app/public/catalog/pages/catalog-page/catalog-page.component.html
@@ -1,21 +1,27 @@
 <app-header></app-header>
 
-<main class="content">
-  <!-- categories -->
+<main class="main">
   <app-categories
+    class="categories"
     (categorySelected)="categorySelected($event)"
   ></app-categories>
-  <!-- subcategories -->
   <div class="container">
-    <app-product-card
-      class="catalog"
-      *ngFor="let product of products$ | async"
-      [price]="product.price"
-      [name]="product.name"
-      [imgUrl]="product.imgUrl"
-    >
-
-    </app-product-card>
+    <div class="subcategories"></div>
+    <div class="catalog">
+      <div class="catalog__info">
+        <h2>Каталог</h2>
+      </div>
+      <div class="catalog__content">
+        <app-product-card
+          class="card"
+          *ngFor="let product of products$ | async"
+          [price]="product.price"
+          [name]="product.name"
+          [imgUrl]="product.imgUrl"
+        >
+        </app-product-card>
+      </div>
+    </div>
   </div>
 </main>
 
