--- a/src/app/public/catalog/pages/catalog-page/catalog-page.component.scss
+++ b/src/app/public/catalog/pages/catalog-page/catalog-page.component.scss
@@ -2,23 +2,24 @@
   width: 100%;
 }
 
-.content {
-  max-width: 1248px;
-  margin: 0 auto;
-  padding: 0 24px;
-  display: grid;
+.categories {
+  padding: 12px 36px;
+}
 
+.main {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .card {
-  max-width: 400px;
-  padding: 16px;
 }
 
-.container {
-  padding: 16px;
-  max-width: 800px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-column-gap: 34px;
+.catalog {
+  &__info {
+    color: black;
+  }
+}
+
+.subcategories {
+  width: 242px;
 }
