--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,7 +14,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a routerLink="../cart">
             <div><svg width="20" height="20" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-cart"></use></svg></div>
             <span>Корзина</span>
           </a>
