я зачем-то AppState обозвал как CartState, дал ему обратно нормальное имя + доработал логику по добавлению товаров в корзину

--- a/src/app/public/cart/pages/cart-page/cart-page.component.html
+++ b/src/app/public/cart/pages/cart-page/cart-page.component.html
@@ -2,6 +2,10 @@
 
 <div>
   <h3>Список товаров</h3>
+
+  <div *ngFor="let product of cartProducts$ | async" class="product-row">
+    {{ product | json }}
+  </div>
 </div>
 
 <app-footer></app-footer>
