сделал модель CartProduct. Попытался добавить удаление, но че-то пошло не так, разберусь позже

--- a/src/app/public/cart/pages/cart-page/cart-page.component.html
+++ b/src/app/public/cart/pages/cart-page/cart-page.component.html
@@ -1,10 +1,8 @@
-<app-header></app-header>
-
 <div>
   <h3>Список товаров</h3>
 
-  <div *ngFor="let product of cartProducts$ | async" class="product-row">
-    {{ product | json }}
+  <div *ngFor="let cartProduct of cartProducts$ | async" class="product-row" (click)="deleteProductFromCart(cartProduct)">
+    {{ cartProduct | json }}
   </div>
 </div>
 
