что-то случилось с роутами, так и не разобрался в чем дело, создал новый проект, в который скопировал все. Это каким-то образом помогло

--- a/src/app/public/catalog/components/categories/categories.component.html
+++ b/src/app/public/catalog/components/categories/categories.component.html
@@ -1,8 +1,8 @@
-<span
-  *ngFor="let category of categories$ | async"
-  (click)="selectCategory(category.id)"
-  [class.category_selected]="category.id === selectedCategoryId"
-  class="category"
->
-  {{ category.name }}
-</span>
+<!--<span-->
+<!--  *ngFor="let category of categories$ | async"-->
+<!--  (click)="selectCategory(category.id)"-->
+<!--  [class.category_selected]="category.id === selectedCategoryId"-->
+<!--  class="category"-->
+<!--&gt;-->
+<!--  {{ category.name }}-->
+<!--</span>-->
