--- a/src/app/public/catalog/components/product-card/product-card.component.html
+++ b/src/app/public/catalog/components/product-card/product-card.component.html
@@ -6,7 +6,7 @@
   <div class="price">
     {{ product.price }} ₽
   </div>
-  <app-button (click)="addProductToCart()">
+  <app-button (click)="addProductToCart($event)">
     В корзину
   </app-button>
 </div>
