--- a/src/app/public/catalog/pages/catalog-page/catalog-page.component.html
+++ b/src/app/public/catalog/pages/catalog-page/catalog-page.component.html
@@ -15,6 +15,7 @@
           *ngFor="let product of products$ | async"
           [product]="product"
           (productSelected)="addProductToCart($event)"
+          (click)="openProductDetails(product.id)"
         >
         </app-product-card>
       </div>
