--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,34 +1,34 @@
-<footer class="footer">
-    <div class="footer__wrapper container">
-        <div class="footer__content">
-            <div class="footer__content__contact">
-                <img src="/assets/images/logo.png" alt=""/>
-                <span><svg width="21" height="21" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-phone"></use></svg><a href="">8 800 555 35 35</a></span>
-                <span><svg width="22" height="18" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-mail"></use></svg><a href="">farmacy@gmail.com</a></span>
-                <address>г. Тюмень, ул Республики, 5а</address>
-                <h4>© 2023 Farmacy</h4>
-            </div>
-            <div class="footer__content__client">
-                <h2>Покупателю</h2>
-                <ul>
-                    <li><a href="#">Бонусная карта</a></li>
-                    <li><a href="#">Акции</a></li>  
-                    <li><a href="#">Корзина</a></li>  
-                    <li><a href="#">Личный кабинет</a></li>  
-                    <li><a href="#">Адреса аптек</a></li>      
-                </ul>
-            </div>
-            <div class="footer__content__about">
-                <h2>О компании</h2>
-                <ul>
-                    <li><a href="#">Политика конфиденциальности</a></li>
-                    <li><a href="#">Оферта</a></li>  
-                    <li><a href="#">Договор</a></li>  
-                </ul>
-            </div>
-            <div class="footer__content__map">
-                <!-- <app-map></app-map> -->
-            </div>
-        </div>
-    </div>
-</footer>
+<!--<footer class="footer">-->
+<!--    <div class="footer__wrapper container">-->
+<!--        <div class="footer__content">-->
+<!--            <div class="footer__content__contact">-->
+<!--                <img src="/src/assets/images/logo.png" alt=""/>-->
+<!--                <span><svg width="21" height="21" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-phone"></use></svg><a href="">8 800 555 35 35</a></span>-->
+<!--                <span><svg width="22" height="18" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-mail"></use></svg><a href="">farmacy@gmail.com</a></span>-->
+<!--                <address>г. Тюмень, ул Республики, 5а</address>-->
+<!--                <h4>© 2023 Farmacy</h4>-->
+<!--            </div>-->
+<!--            <div class="footer__content__client">-->
+<!--                <h2>Покупателю</h2>-->
+<!--                <ul>-->
+<!--                    <li><a href="#">Бонусная карта</a></li>-->
+<!--                    <li><a href="#">Акции</a></li>-->
+<!--                    <li><a href="#">Корзина</a></li>-->
+<!--                    <li><a href="#">Личный кабинет</a></li>-->
+<!--                    <li><a href="#">Адреса аптек</a></li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--            <div class="footer__content__about">-->
+<!--                <h2>О компании</h2>-->
+<!--                <ul>-->
+<!--                    <li><a href="#">Политика конфиденциальности</a></li>-->
+<!--                    <li><a href="#">Оферта</a></li>-->
+<!--                    <li><a href="#">Договор</a></li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--            <div class="footer__content__map">-->
+<!--                &lt;!&ndash; <app-map></app-map> &ndash;&gt;-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</footer>-->
