--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header__wrapper container">
     <div class="header__content">
-      <a routerLink="/catalog"><img src="/assets/images/logo.png" alt=""/></a>
+      <a routerLink="/catalog"><img src="assets/images/logo.png" alt=""/></a>
       <div class="header__content_search">
         <input class="main-field" type="text" placeholder="Введите название..."/>
         <div><svg width="20" height="19" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-search"></use></svg></div>
