--- a/src/app/public/catalog/components/subcategories/subcategories.component.scss
+++ b/src/app/public/catalog/components/subcategories/subcategories.component.scss
@@ -1,10 +1,10 @@
 :host {
   border-radius: 20px;
   padding: 16px;
-  background-color: var(--theme-light-blue);
+  margin-right: auto;
   color: black;
+  width: 100%;
   display: flex;
-  flex-direction: column;
   gap: 8px;
 }
 
