--- a/src/app/public/catalog/components/categories/categories.component.html
+++ b/src/app/public/catalog/components/categories/categories.component.html
@@ -1,7 +1,7 @@
 <span
   *ngFor="let category of categories$ | async"
   (click)="selectCategory(category.id)"
-  [class.category_selected]="category.id === selectedCategoryId"
+  [class.category_selected]="category.id === activeCategoryId"
   class="category"
 >
   {{ category.name }}
