--- a/src/app/public/catalog/components/categories/categories.component.scss
+++ b/src/app/public/catalog/components/categories/categories.component.scss
@@ -1,10 +1,10 @@
 :host {
   border-radius: 20px;
   padding: 16px;
-  background-color: var(--theme-light-blue);
+  margin-right: auto;
   color: black;
+  width: 100%;
   display: flex;
-  flex-direction: column;
   gap: 8px;
 }
 
@@ -13,6 +13,7 @@
   padding: 4px;
   transition: .2s;
   cursor: pointer;
+  white-space:nowrap;
 
   &:hover {
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
