добавил страницу авторизации, осталось нормально прописать логику работы

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -23,7 +23,7 @@
           </span>
         </li>
         <li>
-          <a href="#">
+          <a routerLink="/auth">
             <div><svg width="16" height="20" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-account"></use></svg></div>
             <span>Войти</span>
           </a>
