--- a/src/app/admin/catalog/pages/admin-product-details-page/admin-product-details-page.component.html
+++ b/src/app/admin/catalog/pages/admin-product-details-page/admin-product-details-page.component.html
@@ -1,4 +1,3 @@
-123213123
 <div style="color: black;">
   {{ product | json }}
 </div>
@@ -20,6 +19,8 @@
     <label>Адрес картинки</label>
     <input name="imgUrl" formControlName="imgUrl" />
   </div>
+
+<!-- TODO: Сделать dropdown для выбора подкатегории -->
 
   <button>
     Отправить
