пофиксил отображение карточки товара

--- a/src/app/admin/catalog/pages/admin-product-details-page/admin-product-details-page.component.html
+++ b/src/app/admin/catalog/pages/admin-product-details-page/admin-product-details-page.component.html
@@ -1,5 +1,5 @@
 <div style="color: black;">
-  {{ product | json }}
+  {{ product$ | async | json }}
 </div>
 
 <form [formGroup]="formGroup" (ngSubmit)="updateProduct()">
