--- a/src/app/public/catalog/components/product-card/product-card.component.scss
+++ b/src/app/public/catalog/components/product-card/product-card.component.scss
@@ -21,6 +21,7 @@
 .bottom-group {
   margin-top: 20px;
   display: flex;
+  gap: 16px;
   justify-content: space-between;
   align-items: center;
 }
