--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -5,7 +5,7 @@
 .button {
   border-radius: 8px;
   padding: 6px 24px;
-  background-color: var(--theme-blue);
+  background-color: var(--theme-dark-blue);
   max-width: 130px;
   height: 100%;
   width: 100%;
