--- a/src/app/shared/components/side-menu/side-menu.component.scss
+++ b/src/app/shared/components/side-menu/side-menu.component.scss
@@ -2,7 +2,7 @@
 :host {
   border-radius: 20px;
   padding: 16px;
-  background-color: var(--theme-light-blue);
+  background-color: var(--theme-blue);
   color: black;
   display: flex;
   flex-direction: column;
