--- a/src/assets/css/_vars.scss
+++ b/src/assets/css/_vars.scss
@@ -10,6 +10,7 @@ $section-padding: 40px;
 :root {
   --theme-main: #FFFFFF;
   --theme-black: #1E1E1E;
-  --theme-light-blue: #D7E7FF;
-  --theme-blue: #253B6E;
+  --theme-light-blue: #F5F9FF;
+  --theme-blue: #D7E7FF;
+  --theme-dark-blue: #253B6E;
 }
