--- a/src/app/dashboard/pages/bonus-card/bonus-card.component.html
+++ b/src/app/dashboard/pages/bonus-card/bonus-card.component.html
@@ -1,1 +1,3 @@
-<p>bonus-card works!</p>
+<ng-container *ngIf="(currentUser$ | async) as user">
+  {{ user.userRoom.bonusPoints }} бонусов
+</ng-container>
