--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -2,13 +2,13 @@
     &__content {
         display: flex;
         justify-content: space-between;
-        background: var(--theme-light-blue);
+        background: var(--theme-blue);
         min-height: 200px;
         border-radius: 20px;
         padding: 30px;
 
         h2 {
-            color: var(--theme-blue);
+            color: var(--theme-dark-blue);
             font-weight: 500;
         }
 
@@ -21,9 +21,9 @@
                 a {
                     transition: all .3s ease-in-out;
                     color: var(--theme-black);
-    
+
                     &:hover {
-                        color: var(--theme-blue);
+                        color: var(--theme-dark-blue);
                     }
                 }
             }
@@ -49,7 +49,7 @@
                 a {
                     font-size: 24px;
                     font-weight: 500;
-                    color: var(--theme-blue);
+                    color: var(--theme-dark-blue);
                 }
             }
 
