--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -11,7 +11,7 @@
         display: flex;
         align-items: center;
         padding: 8px 24px;
-        background: var(--theme-light-blue);
+        background: var(--theme-blue);
         border-radius: 20px;
 
         img {
@@ -47,7 +47,7 @@
                     transform: translate(-50%, -50%);
                     width: 30px;
                     height: 30px;
-                    background: var(--theme-light-blue);
+                    background: var(--theme-blue);
                     border-radius: 8px;
                     transition: all .3s ease-in-out;
                 }
@@ -70,7 +70,7 @@
                     transition: all .3s ease-in-out;
 
                     &:hover {
-                        color: var(--theme-blue);
+                        color: var(--theme-dark-blue);
 
                         div {
                             svg {
@@ -78,7 +78,7 @@
                             }
 
                             &:before {
-                                background: var(--theme-blue);
+                                background: var(--theme-dark-blue);
                             }
                         }
                     }
