--- a/src/assets/css/_utils.scss
+++ b/src/assets/css/_utils.scss
@@ -3,35 +3,35 @@
         @content;
     }
  }
- 
+
  @mixin medium-screen {
     @media (max-width: #{$screen-md-max}) {
         @content;
     }
  }
- 
+
  @mixin large-screen {
     @media (max-width: #{$screen-lg-max}) {
         @content;
     }
  }
- 
+
  @mixin large-xl-screen {
     @media (max-width: #{$screen-xl-max}) {
         @content;
     }
  }
- 
+
  @mixin custom-screen($screen) {
     @media (max-width: #{$screen + px}) {
         @content;
     }
  }
- 
+
  @mixin adaptive-value($property, $start-value, $end-value, $min-screen, $max-screen) {
     #{$property}: calc(#{$end-value + px} + (#{$start-value} - #{$end-value}) * ((100vw - #{$min-screen + px}) / (#{$max-screen} - #{$min-screen})));
  }
- 
+
  /*===================================Null=====================================*/
  *, *:before, *:after {
    margin: 0;
@@ -39,7 +39,7 @@
    box-sizing: border-box;
    -moz-box-sizing: border-box;
  }
- 
+
  :focus {outline: none !important;}
  ::-moz-focus-outer, ::-moz-focus-inner {
    border: 0px !important;
@@ -47,7 +47,7 @@
    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
    -webkit-tap-highlight-color: transparent;
  }
- 
+
  a:focus, a:active, button:focus {
    outline: 0!important;
    outline-color: transparent!important;
@@ -55,17 +55,17 @@
    outline-style: none!important;
    box-shadow: 0 0 0 0 rgba(0,123,255,0)!important;
  }
- 
+
  input, textarea,input:active, textarea:active {outline:none;}
  input[type="checkbox"]:focus,
  input[type="radio"]:focus {
    visibility: hidden;
  }
- 
+
  html, body {
    min-height: 100vh;
  }
- 
+
  .wrapper {
    width: 100%;
    overflow: hidden;
@@ -74,7 +74,7 @@
    padding-top: $default-padding;
    padding-bottom: $default-padding;
  }
- 
+
  body {
    font-family: 'Gilroy', sans-serif;
    color: var(--theme-main);
@@ -84,18 +84,18 @@
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }
- 
+
  body.lock {
    overflow: hidden;
  }
- 
+
  .container {
    max-width: $container-width + $default-padding * 2;
    padding-right: $default-padding;
    padding-left: $default-padding;
    margin: 0 auto;
  }
- 
+
  section {
    padding: $section-padding 0;
  }
@@ -103,31 +103,31 @@
  h1, h2, h3, h4 {
    font-weight: 400;
  }
- 
+
  h1 {
    font-size: 32px;
  }
- 
+
  h2 {
    font-size: 24px;
  }
- 
+
  h3 {
    font-size: 16px;
  }
- 
+
  h4 {
    font-size: 12px;
  }
- 
+
  a {
    text-decoration: none;
  }
- 
+
  ul {
    list-style: none;
  }
- 
+
  address {
    font-style: normal;
  }
@@ -141,21 +141,21 @@
     border-radius: 8px;
     padding: 4px 16px;
     width: 100%;
-    color: var(--theme-blue);
+    color: var(--theme-dark-blue);
 }
  /*==============================TextTemplate==================================*/
  .font-weight-700 {
    font-weight: 700;
  }
- 
+
  .font-weight-600 {
    font-weight: 600;
  }
- 
+
  .font-weight-500 {
    font-weight: 500;
  }
- 
+
  .font-weight-400 {
    font-weight: 400;
  }
@@ -174,36 +174,36 @@
    font-weight: 700;
    padding: 1rem 1.5rem;
    transition: all .5s ease;
- 
+
    &:hover {
      transition: all .5s ease;
    }
  }
- 
+
  .white-btn {
    @extend .main-btn;
- 
+
    color: var(--theme-gray);
    background-color: white;
    border: 1px solid var(--theme-gray);
- 
+
    // &:hover {
    //   background-color: var(--theme-gray);
    //   color: var(--theme-main);
    // }
  }
- 
+
  .gray-btn {
    @extend .main-btn;
    background-color: var(--theme-gray);
    border: 1px solid var(--theme-gray);
- 
+
    // &:hover {
    //   background-color: white;
    //   color: var(--theme-gray);
    // }
  }
- 
+
  .blue-btn {
    @extend .main-btn;
    background-color: var(--theme-accent-blue);
@@ -214,4 +214,3 @@
    font-weight: 700;
    min-height: 44px;
  }
- 
