--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -8,7 +8,7 @@
       </div>
       <ul>
         <li>
-          <a href="#">
+          <a routerLink="/favourites">
             <div><svg width="20" height="19" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-favourite"></use></svg></div>
             <span>Избранное</span>
           </a>
