добавил карту с отображением точки доставки во вкладку 'личные данные'

--- a/src/app/dashboard/pages/user-data/user-data.component.html
+++ b/src/app/dashboard/pages/user-data/user-data.component.html
@@ -1,3 +1,9 @@
+<div id="map"></div>
+
+<div *ngIf="user$ | async as user">
+  {{ user.deliveryPoint | json }}
+</div>
+
 <form [formGroup]="formGroup">
 
   <div class="form-group__field">
