--- a/src/app/dashboard/pages/user-data/user-data.component.html
+++ b/src/app/dashboard/pages/user-data/user-data.component.html
@@ -1,24 +1,28 @@
 <div id="map"></div>
 
-<div *ngIf="user$ | async as user">
-  {{ user.deliveryPoint | json }}
-</div>
 
-<form [formGroup]="formGroup">
+<ng-container *ngIf="user$ | async as user">
+  <div >
 
-  <div class="form-group__field">
-    <label>Фамилия</label>
-    <input placeholder="Фамилия" name="lastName" formControlName="lastName" />
+    {{ user.deliveryPoint | json }}
   </div>
-  <div class="form-group__field">
-    <label>Имя</label>
-    <input name="name" formControlName="name" />
-  </div>
-  <div class="form-group__field">
-    <label>Отчество</label>
-    <input name="middleName" formControlName="middleName" />
-  </div>
-  <button (click)="updateUserData()">
-    Update user data
-  </button>
-</form>
+
+  <form [formGroup]="formGroup">
+
+    <div class="form-group__field">
+      <label>Фамилия</label>
+      <input placeholder="Фамилия" name="lastName" formControlName="lastName" />
+    </div>
+    <div class="form-group__field">
+      <label>Имя</label>
+      <input name="name" formControlName="name" />
+    </div>
+    <div class="form-group__field">
+      <label>Отчество</label>
+      <input name="middleName" formControlName="middleName" />
+    </div>
+    <button (click)="updateUserData(user)">
+      Update user data
+    </button>
+  </form>
+</ng-container>
