починил вкладку "избранное"

--- a/src/app/public/favourites/pages/favourite-page/favourites.component.html
+++ b/src/app/public/favourites/pages/favourite-page/favourites.component.html
@@ -5,7 +5,7 @@
     [product]="product"
     [isFavourite]="user.favorites.includes(product.id)"
     (productSelected)="addProductToCart($event)"
-    (addedToFavourites)="addProductToFavourites($event)"
+    (addedToFavourites)="updateFavourites($event, user)"
     (click)="openProductDetails(product.id)"
   >
 
