--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -23,11 +23,11 @@
           </span>
         </li>
         <li>
-          <a routerLink="/auth" *ngIf="!(isUserLoggedIn$ | async)">
+          <a routerLink="/auth" *ngIf="!(user$ | async)">
             <div><svg width="16" height="20" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-account"></use></svg></div>
             <span>Войти</span>
           </a>
-          <a routerLink="/dashboard" *ngIf="(isUserLoggedIn$ | async)">
+          <a routerLink="/dashboard" *ngIf="(user$ | async)">
             <div><svg width="16" height="20" fill="#253B6E"><use xlink:href="assets/icons/sprite.svg#icon-account"></use></svg></div>
             <span>Аккаунт</span>
           </a>
