сделал очистку корзины при заказе товаров

--- a/src/app/public/cart/pages/cart-page/cart-page.component.html
+++ b/src/app/public/cart/pages/cart-page/cart-page.component.html
@@ -1,23 +1,25 @@
+<ng-container *ngIf="cartProducts$ | async as cartProducts">
 <h3>Список товаров</h3>
-<div
-  *ngFor="let cartProduct of cartProducts$ | async"
-  class="product-row"
->
-  <div class="product-row__name">
-    {{ cartProduct.product.name }}
-  </div>
-
-  <div class="product-row__count">
-    Количество: {{ cartProduct.countProduct }}
-  </div>
-
-  <div class="product-row__delete-button"
-       (click)="deleteProductFromCart(cartProduct)"
+  <div
+    *ngFor="let cartProduct of cartProducts"
+    class="product-row"
   >
-    Убрать
-  </div>
-</div>
+    <div class="product-row__name">
+      {{ cartProduct.product.name }}
+    </div>
 
-<app-button class="order-button" (click)="createNewOrder()">
-  Купить
-</app-button>
+    <div class="product-row__count">
+      Количество: {{ cartProduct.countProduct }}
+    </div>
+
+    <div class="product-row__delete-button"
+         (click)="deleteProductFromCart(cartProduct)"
+    >
+      Убрать
+    </div>
+  </div>
+
+  <app-button class="order-button" (click)="createNewOrder(cartProducts)">
+    Купить
+  </app-button>
+</ng-container>
