--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<img src="{{ product.imgUrl }}" alt="" class="img">
+<img src="{{ product.imageUrl }}" alt="" class="img">
 <div class="name">
   {{ product.name }}
 </div>
