добавил компонент комбобокса (нужно стилизовать), поставил его во вкладку избранное (выбор пункта выдачи) и админскую карточку товара

--- a/src/app/admin/catalog/pages/admin-product-details-page/admin-product-details-page.component.html
+++ b/src/app/admin/catalog/pages/admin-product-details-page/admin-product-details-page.component.html
@@ -17,10 +17,17 @@
   </div>
   <div class="form-group__field">
     <label>Адрес картинки</label>
-    <input name="imgUrl" formControlName="imgUrl" />
+    <input name="imageUrl" formControlName="imageUrl" />
   </div>
 
 <!-- TODO: Сделать dropdown для выбора подкатегории -->
+  <app-combobox
+    [items]="subcategories$ | async"
+    [activeItem]="formGroup.get('subCategory')?.value"
+    (activeItemChanges)="selectedItemChanges($event)"
+  >
+
+  </app-combobox>
 
   <button>
     Отправить
