--- a/src/app/dashboard/pages/user-data/user-data.component.html
+++ b/src/app/dashboard/pages/user-data/user-data.component.html
@@ -1,28 +1,21 @@
 <div id="map"></div>
 
 
-<ng-container *ngIf="user$ | async as user">
-  <div >
+<form [formGroup]="formGroup">
 
-    {{ user.deliveryPoint | json }}
+  <div class="form-group__field">
+    <label>Фамилия</label>
+    <input placeholder="Фамилия" name="lastName" formControlName="lastName" />
   </div>
-
-  <form [formGroup]="formGroup">
-
-    <div class="form-group__field">
-      <label>Фамилия</label>
-      <input placeholder="Фамилия" name="lastName" formControlName="lastName" />
-    </div>
-    <div class="form-group__field">
-      <label>Имя</label>
-      <input name="name" formControlName="name" />
-    </div>
-    <div class="form-group__field">
-      <label>Отчество</label>
-      <input name="middleName" formControlName="middleName" />
-    </div>
-    <button (click)="updateUserData(user)">
-      Update user data
-    </button>
-  </form>
-</ng-container>
+  <div class="form-group__field">
+    <label>Имя</label>
+    <input name="name" formControlName="name" />
+  </div>
+  <div class="form-group__field">
+    <label>Отчество</label>
+    <input name="middleName" formControlName="middleName" />
+  </div>
+  <button (click)="updateUserData()">
+    Update user data
+  </button>
+</form>
