--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
-<app-header></app-header>
+<div class="wrapper">
+  <app-header></app-header>
 
-<router-outlet>
+  <router-outlet>
 
-</router-outlet>
+  </router-outlet>
 
-<app-footer>
+  <app-footer>
 
-</app-footer>
+  </app-footer>
+</div>
