--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -6,113 +6,131 @@
 .spacer {
   flex: 1;
 }
-.header {
-    &__content {
-        display: flex;
-        align-items: center;
-        padding: 8px 24px;
-        background: var(--theme-blue);
-        border-radius: 20px;
 
-        img {
-            display: block;
-            max-width: 140px;
+.header {
+  &__content {
+    display: flex;
+    align-items: center;
+    padding: 8px 24px;
+    background: var(--theme-blue);
+    border-radius: 20px;
+
+    img {
+      display: block;
+      max-width: 140px;
+    }
+
+    &_search {
+      position: relative;
+      margin-left: auto;
+      margin-right: 24px;
+      max-width: 535px;
+      width: 100%;
+
+      input {
+        position: relative;
+        min-height: 42px;
+        padding-right: 44px;
+      }
+
+      div {
+        position: absolute;
+        z-index: 1;
+        top: 10px;
+        right: 12px;
+
+        &:before {
+          content: '';
+          position: absolute;
+          z-index: -1;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          width: 30px;
+          height: 30px;
+          background: var(--theme-blue);
+          border-radius: 8px;
+          transition: all .3s ease-in-out;
         }
 
-        &_search {
-            position: relative;
-            margin-left: auto;
-            margin-right: 24px;
-            max-width: 535px;
-            width: 100%;
+        svg {
+          margin-top: 2px;
+          transition: all .3s ease-in-out;
+        }
+      }
+    }
 
-            input {
-                position: relative;
-                min-height: 42px;
-                padding-right: 44px;
-            }
+    ul {
+      display: flex;
+
+      li {
+        a {
+          display: flex;
+          align-items: center;
+          color: var(--theme-black);
+          transition: all .3s ease-in-out;
+
+          &:hover {
+            color: var(--theme-dark-blue);
 
             div {
-                position: absolute;
-                z-index: 1;
-                top: 10px;
-                right: 12px;
+              svg {
+                  fill: var(--theme-main);
+              }
 
-                &:before {
-                    content: '';
-                    position: absolute;
-                    z-index: -1;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                    width: 30px;
-                    height: 30px;
-                    background: var(--theme-blue);
-                    border-radius: 8px;
-                    transition: all .3s ease-in-out;
-                }
-
-                svg {
-                    margin-top: 2px;
-                    transition: all .3s ease-in-out;
-                }
+              &:before {
+                  background: var(--theme-dark-blue);
+              }
             }
-        }
+          }
 
-        ul {
+          div {
             display: flex;
+            position: relative;
+            z-index: 1;
+            margin-right: 12px;
 
-            li {
-                a {
-                    display: flex;
-                    align-items: center;
-                    color: var(--theme-black);
-                    transition: all .3s ease-in-out;
-
-                    &:hover {
-                        color: var(--theme-dark-blue);
-
-                        div {
-                            svg {
-                                fill: var(--theme-main);
-                            }
-
-                            &:before {
-                                background: var(--theme-dark-blue);
-                            }
-                        }
-                    }
-
-                    div {
-                        display: flex;
-                        position: relative;
-                        z-index: 1;
-                        margin-right: 12px;
-
-                        &:before {
-                            content: '';
-                            position: absolute;
-                            z-index: -1;
-                            top: 50%;
-                            left: 50%;
-                            transform: translate(-50%, -50%);
-                            width: 30px;
-                            height: 30px;
-                            background: var(--theme-main);
-                            border-radius: 8px;
-                            transition: all .3s ease-in-out;
-                        }
-
-                        svg {
-                            transition: all .3s ease-in-out;
-                        }
-                    }
-                }
-
-                &:not(:last-child) {
-                    margin-right: 16px;
-                }
+            &:before {
+              content: '';
+              position: absolute;
+              z-index: -1;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              width: 30px;
+              height: 30px;
+              background: var(--theme-main);
+              border-radius: 8px;
+              transition: all .3s ease-in-out;
             }
+
+            svg {
+              transition: all .3s ease-in-out;
+            }
+
+            .header-counter {
+              position: absolute;
+              bottom: -12px;
+              right: -12px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              height: 16px;
+              width: 16px;
+              border-radius: 50%;
+              font-size: 10px;
+              font-weight: 500;
+              color: var(--theme-main);
+              background-color: var(--theme-light-red);
+              transition: all .3s ease-in-out;
+            }
+          }
         }
+
+        &:not(:last-child) {
+            margin-right: 16px;
+        }
+      }
     }
+  }
 }
