--- a/src/assets/css/_utils.scss
+++ b/src/assets/css/_utils.scss
@@ -42,17 +42,13 @@
 
  :focus {outline: none !important;}
  ::-moz-focus-outer, ::-moz-focus-inner {
-   border: 0px !important;
+   border: 0 !important;
    padding: 0;
-   -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
-   -webkit-tap-highlight-color: transparent;
+   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
  }
 
  a:focus, a:active, button:focus {
-   outline: 0!important;
-   outline-color: transparent!important;
-   outline-width: 0!important;
-   outline-style: none!important;
+   outline: transparent none 0 !important;
    box-shadow: 0 0 0 0 rgba(0,123,255,0)!important;
  }
 
