--- a/src/assets/css/_vars.scss
+++ b/src/assets/css/_vars.scss
@@ -13,4 +13,5 @@ $section-padding: 40px;
   --theme-light-blue: #F5F9FF;
   --theme-blue: #D7E7FF;
   --theme-dark-blue: #253B6E;
+  --theme-light-red: #EF5350;
 }
