--- a/src/app/public/cart/pages/cart-page/cart-page.component.html
+++ b/src/app/public/cart/pages/cart-page/cart-page.component.html
@@ -24,13 +24,13 @@
   <ng-container
     *ngIf="cartProducts.length !== 0"
   >
-    <app-combobox
-      [activeItem]="selectedDeliveryPoint"
-      [items]="deliveryPoints$ | async"
-      (activeItemChanges)="deliveryPointChanges($event)"
-    >
+<!--    <app-combobox-->
+<!--      [activeItem]="selectedDeliveryPoint"-->
+<!--      [items]="deliveryPoints$ | async"-->
+<!--      (activeItemChanges)="deliveryPointChanges($event)"-->
+<!--    >-->
 
-    </app-combobox>
+<!--    </app-combobox>-->
 
     <app-button class="order-button" (click)="createNewOrder(cartProducts)">
       Купить
