--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -31,6 +31,9 @@
         position: relative;
         min-height: 42px;
         padding-right: 44px;
+        max-width: 100%;
+        border: none;
+        color: var(--theme-black);
       }
 
       div {
