--- a/src/assets/css/_utils.scss
+++ b/src/assets/css/_utils.scss
@@ -58,6 +58,10 @@
    visibility: hidden;
  }
 
+ input {
+   font-family: 'Gilroy', sans-serif;
+ }
+
  html, body {
    min-height: 100vh;
  }
@@ -126,18 +130,6 @@
  address {
    font-style: normal;
  }
- /*================================Template====================================*/
-.main-field {
-  display: block;
-  outline: none;
-  border: none;
-  font-size: 16px;
-  background: #FFFFFF;
-  border-radius: 8px;
-  padding: 4px 16px;
-  width: 100%;
-  color: var(--theme-dark-blue);
-}
  /*==============================TextTemplate==================================*/
  .font-weight-700 {
    font-weight: 700;
@@ -153,59 +145,4 @@
 
  .font-weight-400 {
    font-weight: 400;
- }
- /*================================Buttons=====================================*/
- .main-btn {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   width: max-content;
-   outline: none;
-   cursor: pointer;
-   border-radius: 110px;
-   color: var(--theme-main);
-   text-transform: uppercase;
-   font-size: 20px;
-   font-weight: 700;
-   padding: 1rem 1.5rem;
-   transition: all .5s ease;
-
-   &:hover {
-     transition: all .5s ease;
-   }
- }
-
- .white-btn {
-   @extend .main-btn;
-
-   color: var(--theme-gray);
-   background-color: white;
-   border: 1px solid var(--theme-gray);
-
-   // &:hover {
-   //   background-color: var(--theme-gray);
-   //   color: var(--theme-main);
-   // }
- }
-
- .gray-btn {
-   @extend .main-btn;
-   background-color: var(--theme-gray);
-   border: 1px solid var(--theme-gray);
-
-   // &:hover {
-   //   background-color: white;
-   //   color: var(--theme-gray);
-   // }
- }
-
- .blue-btn {
-   @extend .main-btn;
-   background-color: var(--theme-accent-blue);
-   color: var(--theme-gray);
-   font-size: 16px;
-   border-radius: 10px;
-   padding: 0.625rem 1.688rem;
-   font-weight: 700;
-   min-height: 44px;
  }
